@@ -23,6 +23,7 @@ Bug fixes
  - [core] honor groups when setting IMAP ACLs
  - [core] honor "any authenticated user" when setting IMAP ACLs
  - [core] avoid exceptions for RRULE with no DTSTART
+ - [core] make sure we handle events occurring after RRULE's UNTIL date
 
 4.0.8 (2019-07-19)
 ------------------
